# sim-logger

./: BUILDING.md  README.md
docs/: standalone_usage.md
examples/: CMakeLists.txt  example_async_cpp.cpp  example_c.c  example_cpp.cpp  example_showcase_cpp.cpp
logger_c_api/: CMakeLists.txt
logger_c_api/include/sim_logger/: c_api.h
logger_c_api/src/: c_api.cpp
logger_core/: CMakeLists.txt
logger_core/include/logger/: async_sink.hpp  console_sink.hpp  dummy_time_source.hpp  file_sink.hpp  global_time.hpp  level.hpp  log_macros.hpp  log_record.hpp  logger.hpp  logger_registry.hpp  pattern_formatter.hpp  sink.hpp  test_sink.hpp  time_source.hpp
logger_core/include/logger/detail/: async_queue.hpp  mutex_ring_buffer_queue.hpp
logger_core/src/: async_sink.cpp  console_sink.cpp  file_sink.cpp  global_time.cpp  level.cpp  logger.cpp  logger_registry.cpp  pattern_formatter.cpp  test_sink.cpp
tests/: CMakeLists.txt  minitest.hpp  test_async_queue_and_sink.cpp  test_c_api.c  test_c_api.cpp  test_console_sink.cpp  test_file_sink.cpp  test_immediate_flush.cpp  test_log_macros.cpp  test_main.cpp  test_pattern_formatter.cpp  test_sprint2_logger_registry.cpp
